<resources>
    <string name="app_name">Login</string>
    <string name="title_activity_menu_garket">Menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_home">Solicitud de avisos</string>
    <string name="menu_gallery">O/T Programadas</string>
    <string name="menu_slideshow">"Visualizar Avisos</string>
    <string name="menu_tools">VIsualizacion de Ordenes</string>
    <string name="menu_share">Indicadores</string>
    <string name="menu_send">Registrar equipo</string>
    <string name="menu_salir">Cerrar sesion</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menugarket">Menu</string>
    <!--Datos del spiner -->
    <string-array name="Equipos">
        <item>MontaCarga</item>
        <item>Camion</item>
        <item>Grua</item>
        <item>Volquete</item>
    </string-array>
</resources>
